--- a/client/templates/partials/SideNav.html
+++ b/client/templates/partials/SideNav.html
@@ -11,6 +11,10 @@
 				<a href="/shopping-list"> <i class="fa fa-shopping-cart"></i> 
 				Shopping List </a>
 			</li>
+			<li>
+				<a href="/ingredients-home"> <i class="fa fa-home"></i> 
+				Ingredients at Home </a>
+			</li>
 		</ul>
 	</nav>
 </template>
